--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,23 +26,19 @@
 }
 
 @article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
+  abbr={SNAM},
+  title={Constrained Expectation-Maximisation for inference of social graphs explaining online user-user interactions},
+  author={Effrosyni Papanastasio, Anastasios Giovanidis},
+  abstract ={Current network inference algorithms fail to generate graphs with edges that can explain whole sequences of node interactions in a given dataset or trace. To quantify how well an inferred graph can explain a trace, we introduce feasibility, a novel quality criterion, and suggest that it is linked to the result's accuracy. In addition, we propose CEM-*, a network inference method that guarantees 100\% feasibility given online social media traces, which is a non-trivial extension of the Expectation-Maximization algorithm developed by Newman (2018). We propose a set of linear optimization updates that incorporate a set of auxiliary variables and a set of feasibility constraints; the latter takes into consideration all the hidden paths that are possible between users based on their timestamps of interaction and guide the inference toward feasibility. We provide two CEM-* variations, that assume either an Erdos Renyi (ER) or a Stochastic Block Model (SBM) prior for the underlying graph's unknown distribution. Extensive experiments on one synthetic and one real-world Twitter dataset show that for both priors CEM-* can generate a posterior distribution of graphs that explains the whole trace while being closer to the ground truth. As an additional benefit, the use of the SBM prior infers and clusters users simultaneously during optimization. CEM-* outperforms baseline and state-of-the-art methods in terms of feasibility, run-time, and precision of the inferred graph and communities. Finally, we propose a heuristic to adapt the inference to lower feasibility requirements and show how it can affect the precision of the result.},
+  numpages={20},
+  journal = {Journal of Social Network Analysis and Mining, },
+  year={2023},
   month={May},
-  publisher=aps,
+  publisher={Springer},
   doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
+  url={https://arxiv.org/abs/2301.10646},
+  html={https://arxiv.org/abs/2301.10646},
+  pdf={snam.pdf},
   dimensions={true},
   selected={true}
 }
