--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,10 +35,10 @@
   year={2023},
   month={May},
   publisher={Springer},
-  doi={10.1103/PhysRev.47.777},
+  doi={2301.10646},
   url={https://arxiv.org/abs/2301.10646},
   html={https://arxiv.org/abs/2301.10646},
-  pdf={snam.pdf},
+  pdf={2301.10646.pdf},
   dimensions={true},
   selected={true}
 }
