--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,7 +25,7 @@
   publisher={American Association of Physics Teachers,}
 }
 
-@article{PhysRev.47.777,
+@article{SNAM.230110646,
   abbr={SNAM},
   title={Constrained Expectation-Maximisation for inference of social graphs explaining online user-user interactions},
   author={Effrosyni Papanastasio, Anastasios Giovanidis},
