--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,7 +21,7 @@
 }
 
 @article{2206.03859,
-  abbr={ComplexNetworks},
+  abbr={ComplexN},
   bibtex_show={true},
   title={Opening up echo chambers via optimal content recommendation},
   author={Antoine Vendeville, Anastasios Giovanidis, Effrosyni Papanastasiou and Benjamin Guedj},
