--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -31,7 +31,7 @@
   year={2023},
   publisher={Springer},
   doi={2206.03859},
-  url={https://arxiv.org/abs/2206.03859},
+  url={https://link.springer.com/chapter/10.1007/978-3-031-21127-0_7},
   html={https://arxiv.org/abs/2206.03859},
   pdf={2206.03859.pdf},
   dimensions={true}
