--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,8 +32,25 @@
   publisher={Springer},
   doi={2206.03859},
   url={https://link.springer.com/chapter/10.1007/978-3-031-21127-0_7},
-  html={https://arxiv.org/abs/2206.03859},
+  html={https://link.springer.com/chapter/10.1007/978-3-031-21127-0_7},
   pdf={2206.03859.pdf},
+  dimensions={true}
+}
+
+@article{3487351.3488279,
+  abbr={ASONAM},
+  bibtex_show={true},
+  title={Opening up echo chambers via optimal content recommendation},
+  author={Bayesian inference of a social graph with trace feasibility guarantees},
+  abstract={Network inference is the process of deciding what is the true unknown graph underlying a set of interactions between nodes. There is a vast literature on the subject, but most known methods have an important drawback: the inferred graph is not guaranteed to explain every interaction from the input trace. We consider this an important issue since such inferred graph cannot be used as input for applications that require a reliable estimate of the true graph. On the other hand, a graph having trace feasibility guarantees can help us better understand the true (hidden) interactions that may have taken place between nodes of interest. The inference of such graph is the goal of this paper. Firstly, given an activity log from a social network, we introduce a set of constraints that take into consideration all the hidden paths that are possible between the nodes of the trace, given their timestamps of interaction. Then, we develop a nontrivial modification of the Expectation-Maximization algorithm by Newman [1], that we call Constrained-EM, which incorporates the constraints and a set of auxiliary variables into the inference process to guide it towards the feasibility of the trace. Experimental results on real-world data from Twitter confirm that Constrained-EM generates a posterior distribution of graphs that explains all the events observed in the trace while presenting the desired properties of a scale-free, small-world graph. Our method also outperforms established methods in terms of feasibility and quality of the inferred graph.},
+  numpages={8},
+  journal = {ASONAM '21: Proceedings of the 2021 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining},
+  year={2021},
+  publisher={IEEE/ACM},
+  doi={10.1145/3487351.3488279},
+  url={https://dl.acm.org/doi/abs/10.1145/3487351.3488279},
+  html={https://dl.acm.org/doi/abs/10.1145/3487351.3488279},
+  pdf={3487351.3488279.pdf},
   dimensions={true}
 }
 
