--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,8 +24,8 @@
   abbr={ComplexN},
   bibtex_show={true},
   title = {Opening up echo chambers via optimal content recommendation},
-  author={Antoine Vendeville, Anastasios Giovanidis, Effrosyni Papanastasiou and Benjamin Guedj},
-  abstract={Online social platforms have become central in the politi- cal debate. In this context, the existence of echo chambers is a prob- lem of primary relevance. These clusters of like-minded individuals tend to reinforce prior beliefs, elicit animosity towards others and aggravate the spread of misinformation. We study this phenomenon on a Twitter dataset related to the 2017 French presidential elections and propose a method to tackle it with content recommendations. We use a quadratic program to find optimal recommendations that maximise the diversity of content users are exposed to, while still accounting for their preferences. Our method relies on a theoretical model that can sufficiently describe how content flows through the platform. We show that the model pro- vides good approximations of empirical measures and demonstrate the effectiveness of the optimisation algorithm at mitigating the echo cham- ber effect on this dataset, even with limited budget for recommendations.},
+  author = {Antoine Vendeville and Anastasios Giovanidis and Effrosyni Papanastasiou and Benjamin Guedj},
+  abstract= {Online social platforms have become central in the political debate. In this context, the existence of echo chambers is a prob- lem of primary relevance. These clusters of like-minded individuals tend to reinforce prior beliefs, elicit animosity towards others and aggravate the spread of misinformation. We study this phenomenon on a Twitter dataset related to the 2017 French presidential elections and propose a method to tackle it with content recommendations. We use a quadratic program to find optimal recommendations that maximise the diversity of content users are exposed to, while still accounting for their preferences. Our method relies on a theoretical model that can sufficiently describe how content flows through the platform. We show that the model pro- vides good approximations of empirical measures and demonstrate the effectiveness of the optimisation algorithm at mitigating the echo cham- ber effect on this dataset, even with limited budget for recommendations.},
   numpages={12},
   journal = {Complex Networks and Their Applications XI: Proceedings of The Eleventh International Conference on Complex Networks and Their Applications: COMPLEX NETWORKS 2022—Volume 1},
   year={2023},
