--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -54,6 +54,23 @@
   dimensions={true}
 }
 
+@article{1908.03957,
+  abbr={SIGIR},
+  bibtex_show={true},
+  title={Tensor Factorization with Label Information for Fake News Detection},
+  author={Frosso Papanastasiou and Georgios Katsimpras and Georgios Paliouras},
+  abstract= {The buzz over the so-called "fake news" has created concerns about a degenerated media environment and led to the need for technological solutions. As the detection of fake news is increasingly considered a technological problem, it has attracted considerable research. Most of these studies primarily focus on utilizing information extracted from textual news content. In contrast, we focus on detecting fake news solely based on structural information of social networks. We suggest that the underlying network connections of users that share fake news are discriminative enough to support the detection of fake news. Thereupon, we model each post as a network of friendship interactions and represent a collection of posts as a multidimensional tensor. Taking into account the available labeled data, we propose a tensor factorization method which associates the class labels of data samples with their latent representations. Specifically, we combine a classification error term with the standard factorization in a unified optimization process. Results on real-world datasets demonstrate that our proposed method is competitive against state-of-the-art methods by implementing an arguably simpler approach. },
+  numpages={7},
+  journal = {ASONAM '21: Proceedings of the 2021 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining},
+  year={2019},
+  doi={10.48550/arXiv.1908.03957},
+  url={https://arxiv.org/abs/1908.03957},
+  html={https://arxiv.org/abs/1908.03957},
+  pdf={1908.03957.pdf},
+  dimensions={true}
+}
+
+
 
 
 
