--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,6 +20,18 @@
   selected={true}
 }
 
+@article{vendeville:hal-04010528,
+  abbr={CCS2022}
+  bibtex_show = {true}
+  title = {Recommendation of content to mitigate the echo chamber effect},
+  author = {Antoine Vendeville and Anastasios Giovanidis and Effrosyni Papanastasiou and Benjamin Guedj},
+  url = {https://hal.science/hal-04010528},
+  journal = {{Conference on Complex Systems, Palma de Mallorca, Spain}},
+  year = {2022},
+  html = {https://hal.science/hal-04010528}
+}
+
+
 @article{2206.03859,
   abbr={ComplexN},
   bibtex_show={true},
