--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@
   selected={true}
 }
 
-@article{vendeville:hal-04010528,
+@article{hal04010528,
   abbr={CCS2022}
   bibtex_show = {true}
   title = {Recommendation of content to mitigate the echo chamber effect},
