--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,8 +21,8 @@
 }
 
 @article{hal04010528,
-  abbr={CCS2022}
-  bibtex_show = {true}
+  abbr={CCS2022},
+  bibtex_show = {true},
   title = {Recommendation of content to mitigate the echo chamber effect},
   author = {Antoine Vendeville and Anastasios Giovanidis and Effrosyni Papanastasiou and Benjamin Guedj},
   url = {https://hal.science/hal-04010528},
