--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -82,6 +82,18 @@
 }
 
 
+@article{1908.03957,
+  abbr={VR},
+  bibtex_show={true},
+  title={Virtual and augmented reality effects on K-12, higher and tertiary education students’ twenty-first century skills},
+  author={George Papanastasiou and Athanasios Drigas and Charalabos Skianis and Miltiadis Lytras and Effrosyni Papanastasiou },
+  abstract={The purpose of this review article is to present state-of-the-art approaches and examples of virtual reality/augmented reality (VR/AR) systems, applications and experiences which improve student learning and the generalization of skills to the real world. Thus, we provide a brief, representative and non-exhaustive review of the current research studies, in order to examine the effects, as well as the impact of VR/AR technologies on K-12, higher and tertiary education students’ twenty-first century skills and their overall learning. According to the literature, there are promising results indicating that VR/AR environments improve learning outcomes and present numerous advantages of investing time and financial resources in K-12, higher and tertiary educational settings. Technological tools such as VR/AR improve digital-age literacy, creative thinking, communication, collaboration and problem solving ability, which constitute the so-called twenty-first century skills, necessary to transform information rather than just receive it. VR/AR enhances traditional curricula in order to enable diverse learning needs of students. Research and development relative to VR/AR technology is focused on a whole ecosystem around smart phones, including applications and educational content, games and social networks, creating immersive three-dimensional spatial experiences addressing new ways of human–computer interaction. Raising the level of engagement, promoting self-learning, enabling multi-sensory learning, enhancing spatial ability, confidence and enjoyment, promoting student-centered technology, combination of virtual and real objects in a real setting and decreasing cognitive load are some of the pedagogical advantages discussed. Additionally, implications of a growing VR/AR industry investment in educational sector are provided. It can be concluded that despite the fact that there are various barriers and challenges in front of the adoption of virtual reality on educational practices, VR/AR applications provide an effective tool to enhance learning and memory, as they provide immersed multimodal environments enriched by multiple sensory features.},
+  journal = {Virtual Reality, Springer London},
+  year={2019},
+  doi={10.1007/s10055-018-0363-2,
+  url={https://doi.org/10.1007/s10055-018-0363-2},
+  html={https://doi.org/10.1007/s10055-018-0363-2},
+}
 
 
 
