--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -75,8 +75,8 @@
   journal = {ASONAM '21: Proceedings of the 2021 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining},
   year={2019},
   doi={10.48550/arXiv.1908.03957},
-  url={https://arxiv.org/abs/1908.03957},
-  html={https://arxiv.org/abs/1908.03957},
+  url={https://doi.org/10.48550/arXiv.1908.03957},
+  html={https://doi.org/10.48550/arXiv.1908.03957},
   pdf={1908.03957.pdf},
   dimensions={true}
 }
